@startuml UtilitySystems

!theme reddress-darkblue
skinparam backgroundColor #111111

abstract class BehaviourGraph
abstract class Node
abstract class Connection

Interface IStatusHandler
Interface IActionHandler

Interface IUtilityHandler
abstract class UtilityNode
abstract class UtilitySelectableNode
abstract class Factor
abstract class FusionFactor

Node <|-- UtilityNode
Connection <|-- UtilityConnection
 UtilitySystem --> UtilityConnection
BehaviourGraph <|-- UtilitySystem
IUtilityHandler <|.. UtilityNode
UtilityNode <|-- UtilitySelectableNode
IStatusHandler <|.. UtilitySelectableNode

UtilitySelectableNode <|-- UtilityBucket
UtilityBucket *-- UtilitySelectableNode

UtilitySelectableNode <|-- UtilityAction
UtilitySelectableNode --* UtilitySystem
UtilityAction *-- Factor

UtilityAction ..|> IActionHandler
UtilityNode <|-- Factor

Factor <|-- VariableFactor
Factor <|-- FusionFactor
Factor <|-- FunctionFactor
FusionFactor <|-- MaxFusionFactor
FusionFactor <|-- MinFusionFactor
FusionFactor <|-- WeightedFusionFactor

FunctionFactor o-- UtilityFunction

Factor --* FusionFactor
Factor --o FunctionFactor




@enduml


